# lawn

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2a08c9d24ed9_enable_timescaledb_and_convert.py  5a1f83f2d8b4_add_zone_category_to_irrigation_zone.py  6c3f4c8be7ab_add_is_enabled_to_irrigation_zone.py  7e2f9a1c3d5b_phase_1_5_tank_mix_schema.py  a1c4e7b92f03_phase_2a_liquid_treatments.py  a7c4e91b52d8_irrigation_skip.py  b2d5f8a13c47_application_method_not_null.py  bb1c6cb831ed_enable_pgcrypto.py  c3e8b41d92f6_normalize_jsonb_nulls.py  c7dab2e13bd7_create_timeseries_tables.py  d4f1a67c8e23_app_settings_and_guardrail_fields.py  da5a66c32ed2_create_base_tables.py  e5a2c9f47b18_seed_season_settings.py  f3a91b2e8c04_fix_irrigation_event_source_constraint.py  f6b3d18a2c94_weather_daily_and_gdd.py
api/src/lawn_api/: __init__.py  config.py  db.py  main.py
api/src/lawn_api/integrations/: __init__.py  openmeteo.py  rachio.py
api/src/lawn_api/models/: __init__.py  constants.py  entities.py
api/src/lawn_api/routers/: __init__.py  admin.py  cultural_practice.py  dashboard.py  equipment.py  export.py  guardrail.py  irrigation_zone.py  lawn_profile.py  product.py  rachio.py  reminder.py  soil_test.py  treatment.py
api/src/lawn_api/schemas/: __init__.py  cultural_practice.py  equipment.py  guardrail.py  irrigation_zone.py  lawn_profile.py  product.py  reminder.py  soil_test.py  treatment.py
api/src/lawn_api/services/: __init__.py  agronomy.py  coverage.py  export.py  guardrails.py  inventory.py  notifications.py  rachio.py  reminder_rules.py  settings.py  units.py  water_balance.py  (+1 more)
api/tests/: conftest.py  test_agronomy.py  test_api.py  test_export.py  test_guardrails.py  test_health_placeholder.py  test_reminder_rules.py  test_units.py
(+83 files in other folders)
